@@ -1,28 +1,32 @@
 package com.example.mykeycloack.keycloak;
 
-import java.util.Collection;
-import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.oauth2.core.oidc.user.OidcUser;
+import java.util.Collection;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 public class CustomGrantedAuthoritiesMapper {
 
-  private final KeycloakService keycloakService;
+  public Collection<? extends GrantedAuthority> mapAuthorities(Map<String, Object> attributes) {
+    Map<String, Object> realmAccess = (Map<String, Object>) attributes.get("realm_access");
 
-  public CustomGrantedAuthoritiesMapper(KeycloakService keycloakService) {
-    this.keycloakService = keycloakService;
-  }
+    if (realmAccess != null && realmAccess.containsKey("roles")) {
+      System.out.println("Realm Access: " + realmAccess);
 
+      List<String> roles = (List<String>) realmAccess.get("roles");
 
-  public Collection<? extends GrantedAuthority> mapAuthorities(OidcUser oidcUser) {
-    String accessToken = oidcUser.getIdToken().getTokenValue();
-    List<String> roles = keycloakService.extractRolesFromToken(accessToken);
+      // 매핑된 롤 출력
+      roles.forEach(role -> System.out.println("Mapped Role: ROLE_" + role));
 
-    // Keycloak의 Roles를 Spring Security의 GrantedAuthority로 변환
-    return roles.stream()
-        .map(role -> new SimpleGrantedAuthority("ROLE_" + role)) // 예: "ROLE_LV1"
-        .toList();
+      // Keycloak의 Roles를 Spring Security의 GrantedAuthority로 변환
+      return roles.stream()
+          .map(role -> new SimpleGrantedAuthority("ROLE_" + role)) // ROLE_ 접두사 추가
+          .collect(Collectors.toList());
+    }
+
+    // roles가 없으면 빈 리스트 반환
+    return List.of();
   }
 }
